--- a/style.css
+++ b/style.css
@@ -1,85 +1,169 @@
-section{
-    display: block;
+header{
+    position: relative;
+    width: 300px;
+    height: auto;
+    margin-top: 50px;
     text-align: center;
+    float: left;
+    width: 70%;
 
 }
 
 
+section{
+    
+    text-align: center;
+    float: left;
+    width: 70%;
+}
+
+footer{
+    text-align: center;
+    float: left;
+    width: 70%;
+    margin-top: 25px;
+}
+
+aside{
+    background-color: magenta;
+    float: right;
+    width: 30%;
+    height: 700px;
+    position:absolute;
+    top: 10px;
+    right: 0;
+}
+
+h1{
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 100;
+    font-size: 100px;
+    margin: 50px;
+  
+}
+
+ button {
+    margin-top: 10px;
+    height: 55px;
+    width: 150px;
+    border-radius: 10px; 
+  }
+
+h4{
+    font-family: sans-serif;
+    color: grey;
+    }
+
+ ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    padding-left: 10px;
+    max-width: 100%;
+   }
+li{
+    filter:grayscale(1);
+    
+}
+li:hover{
+    filter: none;
+}
+
+
+
+#logos{
+    width: 27px;
+    height:auto;
+    padding:5px;
+}
+
+span{
+    color: transparent;
+    position: relative;
+    display: block;
+    line-height: 1em;
+    left: 10px;
+    bottom: 0;
+    font-size: 12px;
+    text-align: center;
+    
+}
+span:hover{
+    color:black;
+}
+
+
+
+.quotes{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin: 10px;
+    padding: 5px;
+
+}
+
+.download{
+    padding: 8px 8px 8px 55px;
+    background: url('./images/cloud.png');
+    background-repeat: no-repeat;
+    background-position: left;
+    background-color: rgb(185, 177, 56);
+    box-shadow: dimgrey 0 9px 18px 0;
+}
+ 
+.download:hover{
+    background-color: rgb(162, 223, 41);
+    box-shadow: dimgrey 0 18px 36px 0;
+
+}
+
+
+.top{
+    font-family: sans-serif;
+    color: grey;
+    position: absolute;
+    top: 150px;
+    right: 35%;
+    left: 35%;     
+}
+
+.links{
+    position: relative;
+    display: block;
+    color:gold;
+}
+.links:hover{
+    color: goldenrod;
 }
 
 #logo{
-    width: 100px%;
-    height: 100px;
-    i
+    position:absolute;
+    top: 10px;
+    width: 75px;
+    height: auto;
 }
-h1{
-    font-family:64px/1em "Nixie One", serif;
-    font-size: 50px;
-    font-weight: lighter;
-    color: black;
-    text-align: center;
-}
+
 .top{
-    text-align: center;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-weight: 600;
-}
-#release{
-    color: gold;
-}
-.container button{
-    
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    background-color: burlywood;
-    color: black;
-    font-size: 16px;
-    padding: 12px 24px;
-    border: black 4px solid;
-    border-radius: 15px;
-    cursor: pointer;
 
 }
 
-.container button:hover{
-    box-shadow: 0 18px 36px 0 gray;
-    background-color: rgb(105, 255, 218);
+img{
+    height: auto;
+    width: auto;
+    object-fit: contain;
 }
+#num1{
+    font-size: 25px;
+    margin: 15px;
+    padding:10px
+} 
+#num2{
+    font-size: 25px;
+    margin: 15px;
+    padding:10px
+}  
 
-.num1{
-    text-align: center;
-   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-
-.num2{
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-
-.quotes{
-    margin: auto;
-    padding: 10px;
-    display: flex;
-    justify-content: space-around;
-}
-footer{
-    text-align: center;
-}
-.notifications{
-
-}
-
-.container{
-    position: relative;
-    width: 50%;
-    }
-
-    .container img {
-        width: 100%;
-        height: auto;
-    }
-    #notifications{
-        margin: auto;
-    }
